[tool.poetry]
name = "flet-hello-world"
version = "0.1.0"
description = ""
authors = ["FAD95 <feescorciam@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
flet = "^0.5.0"
pyinstaller = "^5.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
